manifest/query-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service
  namespace: vivek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
      - name: query-service
        image: clusteraliregistry.azurecr.io/axion-query-service:v1
        ports:
        - containerPort: 8000
