manifest/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query-service
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
