manifest/query-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: query-ingress
  namespace: vivek

spec:
  ingressClassName: nginx
  rules:
  - host: query-service.kulphi.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: query-service
            port: 
              number: 80
